// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ogmiosToCore block babbage can translate from babbage block 1`] = `
Object {
  "body": Array [
    Object {
      "auxiliaryData": undefined,
      "body": Object {
        "auxiliaryDataHash": undefined,
        "certificates": Array [
          Object {
            "__typename": "StakeDeregistrationCertificate",
            "stakeCredential": Object {
              "hash": "c568341dc347876c1c79e07de3e76265560bca4bb9e6af9f36e40923",
              "type": 0,
            },
          },
        ],
        "collateralReturn": undefined,
        "collaterals": undefined,
        "donation": undefined,
        "fee": 171661n,
        "inputs": Array [
          Object {
            "index": 0,
            "txId": "b5d98d634ff9992fc448e665cf0a3f56c07fe5d96b511f8b17111dbb3f7eb7c9",
          },
        ],
        "mint": undefined,
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1qq2u3e0afx3dqk95hfptv7wm8rl0fht2ecehxzy2yr3g5z79dq6pms68sakpc70q0h37wcn92c9u5jaeu6he7dhypy3sxd05k6",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 9999134743n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": undefined,
        "scriptIntegrityHash": undefined,
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": Object {
          "invalidBefore": undefined,
          "invalidHereafter": 11201918,
        },
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "543dd5eb80eb34d4caabeb00f7137e9330d1c8afa890d367ef8bdfad24b7f321",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": undefined,
        "redeemers": undefined,
        "scripts": undefined,
        "signatures": Map {
          "87e756b9b15d5d1265bb1297d63b20ef9461fd9d863e52656ec8cb6aca99a25c" => "d6f7bfebd57ede5023d0a766ad976cdf1b7c033b7ba95cf115ab8be70661c67134059c7a8c9a5fe3942096a6737e91e264d0add70b50a5215100dc12bdb75105",
          "0b4bfb2f2fc4fbeaf9399455cad837f428706a76bc37deb4d9b0cc0ed8093e6b" => "639b988a45be61e0fd2cc0ddc46958dcf7ed9cb902ddcd55ecfb6c1a199b4b5e85e109e3d05d36301f6468c70c0e7dfde28068a0a31eb9a61bf9682348d0a102",
        },
      },
    },
    Object {
      "auxiliaryData": Object {
        "blob": Map {
          58n => "",
        },
        "scripts": undefined,
      },
      "body": Object {
        "auxiliaryDataHash": "3f5d7adf353de22cf1fc514aa911901c5fbd1b5ee3ed57950a6dc5a0fe1dbb20",
        "certificates": undefined,
        "collateralReturn": undefined,
        "collaterals": undefined,
        "donation": undefined,
        "fee": 181033n,
        "inputs": Array [
          Object {
            "index": 0,
            "txId": "458965adb212f57bbe3bf97ba0cc9caa142ce59f79be803332408e567b55b4af",
          },
          Object {
            "index": 1,
            "txId": "458965adb212f57bbe3bf97ba0cc9caa142ce59f79be803332408e567b55b4af",
          },
        ],
        "mint": Map {
          "eb48b495393986032e8cef0b0a9b2ce64b3881e8a29347e169c7122c4654" => -30n,
        },
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1qq9tud0fzpj6pdeqeegrma25ngfrre9ruwwcuj2m6dnsreu2qtzuksrwqtv4stsk3hq2uscsh90rf5rdgg38k5t0f0nsp30w94",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": Map {
                "eb48b495393986032e8cef0b0a9b2ce64b3881e8a29347e169c7122c4654" => 70n,
              },
              "coins": 1150770n,
            },
          },
          Object {
            "address": "addr_test1qq9tud0fzpj6pdeqeegrma25ngfrre9ruwwcuj2m6dnsreu2qtzuksrwqtv4stsk3hq2uscsh90rf5rdgg38k5t0f0nsp30w94",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 9692318369n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": undefined,
        "scriptIntegrityHash": undefined,
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": Object {
          "invalidBefore": undefined,
          "invalidHereafter": 11192321,
        },
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "be69e4186eaf01fa31a1ad1b16780269f34dbab5d73dd34b8e785ed88e330e12",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": undefined,
        "redeemers": undefined,
        "scripts": Array [
          Object {
            "__type": "native",
            "keyHash": "583dda8c51947fb1653150f3daa7c724637f099d77bc7759edc22a8e",
            "kind": 0,
          },
        ],
        "signatures": Map {
          "47c7878b4737c1676d83422fb8f72eb66f1ecb7c94a3c9a7b93ccc0dec7e8f25" => "080a8bf5a6ffbdc521776fca3272290f243e441ffdbbd873e4dfa3f2466fa45e082176b3dbcd09f376eed9cc465fcf538520b2c58a487565e711ad158d2f1c07",
          "c92a58c6a3bd0d181122e6294bdaf00ba43cf65c65d7275ceb2388570be883d7" => "594bb85fed2bef13f2f573607831a69b7a5cce97ca6fed2a0026303e85f65a9d552fd6bbd77d10720110321e0aa8e5d1571fb2d38c848a7f4789e80f17516601",
        },
      },
    },
    Object {
      "auxiliaryData": Object {
        "blob": Map {
          0n => Array [],
        },
        "scripts": undefined,
      },
      "body": Object {
        "auxiliaryDataHash": "b93d8e428871a0b0e12c5c554653f515f50fe48dc5b55af7e3667e7d9661ea2c",
        "certificates": undefined,
        "collateralReturn": undefined,
        "collaterals": undefined,
        "donation": undefined,
        "fee": 177029n,
        "inputs": Array [
          Object {
            "index": 1,
            "txId": "803f8599f482d6f4c84da3b095efb4667aa4506d442cf080125a1baa1d66085e",
          },
          Object {
            "index": 0,
            "txId": "90f5bcb35b44d7f3f49ddb2907e0f916a86328eefe69bab9214bed9f5fad7487",
          },
        ],
        "mint": undefined,
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1qry0mqhwlf84py9nhz5qukujgjjx26cwg3zqvm2aqeuqqneyz5g72vhh8ws2fcjudfjesyl8fy4qss4rdx9v34e2pxps5s28ar",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 1000000n,
            },
          },
          Object {
            "address": "addr_test1qra40qtvuef6dr4ckvzgme7sg5thtdjhjrc268uvn22reqeyz5g72vhh8ws2fcjudfjesyl8fy4qss4rdx9v34e2pxpsglu3mg",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 1639738n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": undefined,
        "scriptIntegrityHash": undefined,
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": Object {
          "invalidBefore": undefined,
          "invalidHereafter": 11198351,
        },
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "d95c45762d620b81a6eeeebacb86d2b6af4e00df2324f0b1bf14cf9d86b18c16",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": undefined,
        "redeemers": undefined,
        "scripts": undefined,
        "signatures": Map {
          "21ccfef5d816ed98dbf00de037322303fda53e1a01a844f38444ba3eb6f6e9e4" => "634c8e2a38429b95e588732655c0513909b5415e7f736ba95c98c394b0fbdb9f1cf102d4230939db883226b7d850fc04b10101aec235686c1ad4da7b0765e600",
          "2cf1d6c8d41391e658e25dbc88638831d7af3254988bde4650e1c595c2121461" => "b81ebb6d1c2ec74a5c210e9656cb27732f084f653abfe01f56e3d5d39a87a47d933724684d753564274b32def9d923dd3885240265ae7ce87904efd80a563708",
        },
      },
    },
    Object {
      "auxiliaryData": undefined,
      "body": Object {
        "auxiliaryDataHash": undefined,
        "certificates": undefined,
        "collateralReturn": undefined,
        "collaterals": Array [
          Object {
            "index": 0,
            "txId": "958adee7adb5cfe0510e9f9b63af2d9409bf25637af1ac899fe34b7519568112",
          },
        ],
        "donation": undefined,
        "fee": 367282n,
        "inputs": Array [
          Object {
            "index": 0,
            "txId": "c962f25ff9293e84862f336cfa290adce4804fc7e9488c9a10939c17918935f0",
          },
        ],
        "mint": Map {
          "4d2047d7af3d8de799de5daa6e1b0ebfc039f4274084d5bb9ba3975d42594e45544c6963656e7365" => 2n,
        },
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1qrc7mfr62uj0zg07ylfq37ukce6ahxtumdl0d3ar5aw35x758sc7z8763mfpes0j7wqrkkrdgna98c0rtlps585ypdnst69syh",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 2371174n,
            },
          },
          Object {
            "address": "addr_test1wrn96kc0xx774qnyzccygr0qdxs4escmy8ptfu38p3hfehsu5427k",
            "datum": undefined,
            "datumHash": "118cd93427a8e035d484e55ddd4c70200ac5a4d8e63d9d1b89e8a8d49d229415",
            "scriptReference": undefined,
            "value": Object {
              "assets": Map {
                "4d2047d7af3d8de799de5daa6e1b0ebfc039f4274084d5bb9ba3975d42594e45544c6963656e7365" => 1n,
              },
              "coins": 1724000n,
            },
          },
          Object {
            "address": "addr_test1wrn96kc0xx774qnyzccygr0qdxs4escmy8ptfu38p3hfehsu5427k",
            "datum": undefined,
            "datumHash": "118cd93427a8e035d484e55ddd4c70200ac5a4d8e63d9d1b89e8a8d49d229415",
            "scriptReference": undefined,
            "value": Object {
              "assets": Map {
                "4d2047d7af3d8de799de5daa6e1b0ebfc039f4274084d5bb9ba3975d42594e45544c6963656e7365" => 1n,
              },
              "coins": 1724000n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": Array [
          "f1eda47a5724f121fe27d208fb96c675db997cdb7ef6c7a3a75d1a1b",
        ],
        "scriptIntegrityHash": "86b2db419eb3ac0d6180255726b53900d26ea7c7eab5cd209607eb6d9ae5a136",
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": undefined,
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "e8b1c72c0c3002f8d157dc94bb28d3f2ebb3839c859ef8a325c6feefb120e11b",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": Array [
          Object {
            "cbor": "d8799f581c0bfe875a7ae9db3c1b3827483ac6a1d02a7a93d3d26df00c7973aa47ff",
            "constructor": 0n,
            "fields": Object {
              "cbor": "9f581c0bfe875a7ae9db3c1b3827483ac6a1d02a7a93d3d26df00c7973aa47ff",
              "items": Array [
                Uint8Array [
                  11,
                  254,
                  135,
                  90,
                  122,
                  233,
                  219,
                  60,
                  27,
                  56,
                  39,
                  72,
                  58,
                  198,
                  161,
                  208,
                  42,
                  122,
                  147,
                  211,
                  210,
                  109,
                  240,
                  12,
                  121,
                  115,
                  170,
                  71,
                ],
              ],
            },
          },
        ],
        "redeemers": Array [
          Object {
            "data": Object {
              "cbor": "d87980",
              "constructor": 0n,
              "fields": Object {
                "cbor": "80",
                "items": Array [],
              },
            },
            "executionUnits": Object {
              "memory": 769094,
              "steps": 226632481,
            },
            "index": 0,
            "purpose": "mint",
          },
        ],
        "scripts": Array [
          Object {
            "__type": "plutus",
            "bytes": "590a05010000333323322323322323233223232323232323232323232323232323232323232322222322323253353232533500213500122333350012302949894cd4cc03800c03040ac4cd5ce24921496e76616c6964206c6963656e7365206d696e74696e6720617574686f726974790002a230294988c0a52613500122333350012302949894cd54cd4cc03800c03040ac4cd5ce248121496e76616c6964206c6963656e7365206d696e74696e6720617574686f726974790002a153355335333355300f120013350102223003300200120012202c35026122333550272233355029225335002213300702600210010013502a1223300235004222533500121533533355302b1200122333573466e3c0080040dc0d8004d403488888888880088c8c84ccccccd5d200191999ab9a3370e6aae75400d2000233335573ea0064a06646666aae7cd5d128021299a991999999aba400125036250362503625036235037375c0040626ae85401484d40d848c004008540d0940d00bc0b8940c80b0940c4940c4940c4940c40b04d55cf280089baa0011502d1502c00100135005222222222200902b102a102b102b13357389211a2020496e636f7272656374206c6963656e7365206d696e7465640002a102a230294988c0a5263333573466e1cd55cea801a400046644246600200600464646464646464646464646666ae68cdc39aab9d500a480008cccccccccc888888888848cccccccccc00402c02802402001c01801401000c008cd40688c8c8cccd5cd19b8735573aa004900011991091980080180118119aba15002301f357426ae8940088c98c80b0cd5ce01681601509aab9e5001137540026ae854028cd406806cd5d0a804999aa80ebae501c35742a010666aa03aeb94070d5d0a80399a80d0119aba1500633501a335502602475a6ae854014c8c8c8cccd5cd19b8735573aa00490001199109198008018011919191999ab9a3370e6aae754009200023322123300100300233502975a6ae854008c0a8d5d09aba2500223263203033573806206005c26aae7940044dd50009aba150023232323333573466e1cd55cea8012400046644246600200600466a052eb4d5d0a80118151aba135744a004464c6406066ae700c40c00b84d55cf280089baa001357426ae8940088c98c80b0cd5ce01681601509aab9e5001137540026ae854010cd4069d71aba1500333501a335502675c40026ae854008c080d5d09aba2500223263202833573805205004c26ae8940044d5d1280089aba25001135744a00226ae8940044d5d1280089aba25001135744a00226aae7940044dd50009aba150033232323333573466e1d40052006232122223004005301b357426aae79400c8cccd5cd19b875002480108c848888c008014c074d5d09aab9e500423333573466e1d400d20022321222230010053019357426aae7940148cccd5cd19b875004480008c848888c00c014dd71aba135573ca00c464c6404666ae7009008c08408007c0784d55cea80089baa001357426ae89400c8c98c8070cd5ce00e80e00d1999ab9a3370ea0089001109100111999ab9a3370ea00a9000109100091931900e19ab9c01d01c01a019101a13263201a335738921035054350001a135573ca00226ea80044d55ce9baa00122350022222222222533533355300d1200133500e225335002210031001502125335333573466e3c0300040a80a44d408c0045408800c840a840a0c8004d5407488448894cd40044d400c88004884ccd401488008c010008ccd54c01c4800401401000448848cc00400c00848c88c008dd6000990009aa80e111999aab9f0012501b233501a30043574200460066ae880080448c8c8c8cccd5cd19b8735573aa00690001199911091998008020018011919191999ab9a3370e6aae7540092000233221233001003002301335742a00466a0180246ae84d5d1280111931900b19ab9c017016014135573ca00226ea8004d5d0a801999aa803bae500635742a00466a010eb8d5d09aba2500223263201233573802602402026ae8940044d55cf280089baa0011335500175ceb44488c88c008dd5800990009aa80d11191999aab9f0022501a23350193355014300635573aa004600a6aae794008c010d5d100180809aba100112232323333573466e1d400520002350143005357426aae79400c8cccd5cd19b87500248008940508c98c8040cd5ce00880800700689aab9d500113754002464646666ae68cdc39aab9d5002480008cc8848cc00400c008c014d5d0a8011bad357426ae8940088c98c8034cd5ce00700680589aab9e5001137540024646666ae68cdc39aab9d5001480008dd71aba135573ca004464c6401666ae7003002c0244dd500089119191999ab9a3370ea00290021091100091999ab9a3370ea00490011190911180180218031aba135573ca00846666ae68cdc3a801a400042444004464c6401c66ae7003c03803002c0284d55cea80089baa0012323333573466e1d40052002201523333573466e1d40092000201523263200a33573801601401000e26aae74dd5000919191919191999ab9a3370ea002900610911111100191999ab9a3370ea004900510911111100211999ab9a3370ea00690041199109111111198008048041bae35742a00a6eb4d5d09aba2500523333573466e1d40112006233221222222233002009008375c6ae85401cdd71aba135744a00e46666ae68cdc3a802a400846644244444446600c01201060186ae854024dd71aba135744a01246666ae68cdc3a8032400446424444444600e010601a6ae84d55cf280591999ab9a3370ea00e900011909111111180280418071aba135573ca018464c6402466ae7004c04804003c03803403002c0284d55cea80209aab9e5003135573ca00426aae7940044dd50009191919191999ab9a3370ea002900111999110911998008028020019bad35742a0086eb4d5d0a8019bad357426ae89400c8cccd5cd19b875002480008c8488c00800cc020d5d09aab9e500623263200b33573801801601201026aae75400c4d5d1280089aab9e500113754002464646666ae68cdc3a800a400446424460020066eb8d5d09aab9e500323333573466e1d400920002321223002003375c6ae84d55cf280211931900419ab9c009008006005135573aa00226ea800444888c8c8cccd5cd19b8735573aa0049000119aa80598031aba150023005357426ae8940088c98c8020cd5ce00480400309aab9e5001137540029309000a48103505431003200135500b2211222533500115007221350022253353300700600213500c0011333553009120010070060031122123300100300212122300200311220011122320013200135500922533500110032213300600230040011233500150025003112200212212233001004003233573892011443617463682d616c6c2063617365206572726f720000212200212200111232300100122330033002002001480092211cf1eda47a5724f121fe27d208fb96c675db997cdb7ef6c7a3a75d1a1b0048810c42594e45544c6963656e73650001",
            "version": 0,
          },
        ],
        "signatures": Map {
          "3213e3fa6e42a75ba69df35d80666a021b0a650be3c5dadee03532414e90ab9c" => "76183df968ab1309d7a411d5513c24640c766c87d875415769cf373c59454a181c93963b1b1c33be70cc62db0bc8e3e2e0a1b53c1ba338ab58e1baf79642ca0c",
        },
      },
    },
    Object {
      "auxiliaryData": undefined,
      "body": Object {
        "auxiliaryDataHash": undefined,
        "certificates": undefined,
        "collateralReturn": undefined,
        "collaterals": Array [
          Object {
            "index": 0,
            "txId": "958adee7adb5cfe0510e9f9b63af2d9409bf25637af1ac899fe34b7519568112",
          },
        ],
        "donation": undefined,
        "fee": 383135n,
        "inputs": Array [
          Object {
            "index": 7,
            "txId": "20365bc2f9e9b368cf61f4670d0e0fb295a178f66fe8986d4aee713d105b27f6",
          },
        ],
        "mint": Map {
          "4d2047d7af3d8de799de5daa6e1b0ebfc039f4274084d5bb9ba3975d42594e45544c6963656e7365" => 3n,
        },
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1qrc7mfr62uj0zg07ylfq37ukce6ahxtumdl0d3ar5aw35x758sc7z8763mfpes0j7wqrkkrdgna98c0rtlps585ypdnst69syh",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 4444865n,
            },
          },
          Object {
            "address": "addr_test1wrn96kc0xx774qnyzccygr0qdxs4escmy8ptfu38p3hfehsu5427k",
            "datum": undefined,
            "datumHash": "118cd93427a8e035d484e55ddd4c70200ac5a4d8e63d9d1b89e8a8d49d229415",
            "scriptReference": undefined,
            "value": Object {
              "assets": Map {
                "4d2047d7af3d8de799de5daa6e1b0ebfc039f4274084d5bb9ba3975d42594e45544c6963656e7365" => 1n,
              },
              "coins": 1724000n,
            },
          },
          Object {
            "address": "addr_test1wrn96kc0xx774qnyzccygr0qdxs4escmy8ptfu38p3hfehsu5427k",
            "datum": undefined,
            "datumHash": "118cd93427a8e035d484e55ddd4c70200ac5a4d8e63d9d1b89e8a8d49d229415",
            "scriptReference": undefined,
            "value": Object {
              "assets": Map {
                "4d2047d7af3d8de799de5daa6e1b0ebfc039f4274084d5bb9ba3975d42594e45544c6963656e7365" => 1n,
              },
              "coins": 1724000n,
            },
          },
          Object {
            "address": "addr_test1wrn96kc0xx774qnyzccygr0qdxs4escmy8ptfu38p3hfehsu5427k",
            "datum": undefined,
            "datumHash": "118cd93427a8e035d484e55ddd4c70200ac5a4d8e63d9d1b89e8a8d49d229415",
            "scriptReference": undefined,
            "value": Object {
              "assets": Map {
                "4d2047d7af3d8de799de5daa6e1b0ebfc039f4274084d5bb9ba3975d42594e45544c6963656e7365" => 1n,
              },
              "coins": 1724000n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": Array [
          "f1eda47a5724f121fe27d208fb96c675db997cdb7ef6c7a3a75d1a1b",
        ],
        "scriptIntegrityHash": "efa020e8985191676d8922ea1bb7f0134dda7008a9a02fa5d87d00363a9ae096",
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": undefined,
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "2c8ddb336af166f19bf609f259fa9217fc3c7fed76c576e13bde393c145e181f",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": Array [
          Object {
            "cbor": "d8799f581c0bfe875a7ae9db3c1b3827483ac6a1d02a7a93d3d26df00c7973aa47ff",
            "constructor": 0n,
            "fields": Object {
              "cbor": "9f581c0bfe875a7ae9db3c1b3827483ac6a1d02a7a93d3d26df00c7973aa47ff",
              "items": Array [
                Uint8Array [
                  11,
                  254,
                  135,
                  90,
                  122,
                  233,
                  219,
                  60,
                  27,
                  56,
                  39,
                  72,
                  58,
                  198,
                  161,
                  208,
                  42,
                  122,
                  147,
                  211,
                  210,
                  109,
                  240,
                  12,
                  121,
                  115,
                  170,
                  71,
                ],
              ],
            },
          },
        ],
        "redeemers": Array [
          Object {
            "data": Object {
              "cbor": "d87980",
              "constructor": 0n,
              "fields": Object {
                "cbor": "80",
                "items": Array [],
              },
            },
            "executionUnits": Object {
              "memory": 905186,
              "steps": 265573006,
            },
            "index": 0,
            "purpose": "mint",
          },
        ],
        "scripts": Array [
          Object {
            "__type": "plutus",
            "bytes": "590a05010000333323322323322323233223232323232323232323232323232323232323232322222322323253353232533500213500122333350012302949894cd4cc03800c03040ac4cd5ce24921496e76616c6964206c6963656e7365206d696e74696e6720617574686f726974790002a230294988c0a52613500122333350012302949894cd54cd4cc03800c03040ac4cd5ce248121496e76616c6964206c6963656e7365206d696e74696e6720617574686f726974790002a153355335333355300f120013350102223003300200120012202c35026122333550272233355029225335002213300702600210010013502a1223300235004222533500121533533355302b1200122333573466e3c0080040dc0d8004d403488888888880088c8c84ccccccd5d200191999ab9a3370e6aae75400d2000233335573ea0064a06646666aae7cd5d128021299a991999999aba400125036250362503625036235037375c0040626ae85401484d40d848c004008540d0940d00bc0b8940c80b0940c4940c4940c4940c40b04d55cf280089baa0011502d1502c00100135005222222222200902b102a102b102b13357389211a2020496e636f7272656374206c6963656e7365206d696e7465640002a102a230294988c0a5263333573466e1cd55cea801a400046644246600200600464646464646464646464646666ae68cdc39aab9d500a480008cccccccccc888888888848cccccccccc00402c02802402001c01801401000c008cd40688c8c8cccd5cd19b8735573aa004900011991091980080180118119aba15002301f357426ae8940088c98c80b0cd5ce01681601509aab9e5001137540026ae854028cd406806cd5d0a804999aa80ebae501c35742a010666aa03aeb94070d5d0a80399a80d0119aba1500633501a335502602475a6ae854014c8c8c8cccd5cd19b8735573aa00490001199109198008018011919191999ab9a3370e6aae754009200023322123300100300233502975a6ae854008c0a8d5d09aba2500223263203033573806206005c26aae7940044dd50009aba150023232323333573466e1cd55cea8012400046644246600200600466a052eb4d5d0a80118151aba135744a004464c6406066ae700c40c00b84d55cf280089baa001357426ae8940088c98c80b0cd5ce01681601509aab9e5001137540026ae854010cd4069d71aba1500333501a335502675c40026ae854008c080d5d09aba2500223263202833573805205004c26ae8940044d5d1280089aba25001135744a00226ae8940044d5d1280089aba25001135744a00226aae7940044dd50009aba150033232323333573466e1d40052006232122223004005301b357426aae79400c8cccd5cd19b875002480108c848888c008014c074d5d09aab9e500423333573466e1d400d20022321222230010053019357426aae7940148cccd5cd19b875004480008c848888c00c014dd71aba135573ca00c464c6404666ae7009008c08408007c0784d55cea80089baa001357426ae89400c8c98c8070cd5ce00e80e00d1999ab9a3370ea0089001109100111999ab9a3370ea00a9000109100091931900e19ab9c01d01c01a019101a13263201a335738921035054350001a135573ca00226ea80044d55ce9baa00122350022222222222533533355300d1200133500e225335002210031001502125335333573466e3c0300040a80a44d408c0045408800c840a840a0c8004d5407488448894cd40044d400c88004884ccd401488008c010008ccd54c01c4800401401000448848cc00400c00848c88c008dd6000990009aa80e111999aab9f0012501b233501a30043574200460066ae880080448c8c8c8cccd5cd19b8735573aa00690001199911091998008020018011919191999ab9a3370e6aae7540092000233221233001003002301335742a00466a0180246ae84d5d1280111931900b19ab9c017016014135573ca00226ea8004d5d0a801999aa803bae500635742a00466a010eb8d5d09aba2500223263201233573802602402026ae8940044d55cf280089baa0011335500175ceb44488c88c008dd5800990009aa80d11191999aab9f0022501a23350193355014300635573aa004600a6aae794008c010d5d100180809aba100112232323333573466e1d400520002350143005357426aae79400c8cccd5cd19b87500248008940508c98c8040cd5ce00880800700689aab9d500113754002464646666ae68cdc39aab9d5002480008cc8848cc00400c008c014d5d0a8011bad357426ae8940088c98c8034cd5ce00700680589aab9e5001137540024646666ae68cdc39aab9d5001480008dd71aba135573ca004464c6401666ae7003002c0244dd500089119191999ab9a3370ea00290021091100091999ab9a3370ea00490011190911180180218031aba135573ca00846666ae68cdc3a801a400042444004464c6401c66ae7003c03803002c0284d55cea80089baa0012323333573466e1d40052002201523333573466e1d40092000201523263200a33573801601401000e26aae74dd5000919191919191999ab9a3370ea002900610911111100191999ab9a3370ea004900510911111100211999ab9a3370ea00690041199109111111198008048041bae35742a00a6eb4d5d09aba2500523333573466e1d40112006233221222222233002009008375c6ae85401cdd71aba135744a00e46666ae68cdc3a802a400846644244444446600c01201060186ae854024dd71aba135744a01246666ae68cdc3a8032400446424444444600e010601a6ae84d55cf280591999ab9a3370ea00e900011909111111180280418071aba135573ca018464c6402466ae7004c04804003c03803403002c0284d55cea80209aab9e5003135573ca00426aae7940044dd50009191919191999ab9a3370ea002900111999110911998008028020019bad35742a0086eb4d5d0a8019bad357426ae89400c8cccd5cd19b875002480008c8488c00800cc020d5d09aab9e500623263200b33573801801601201026aae75400c4d5d1280089aab9e500113754002464646666ae68cdc3a800a400446424460020066eb8d5d09aab9e500323333573466e1d400920002321223002003375c6ae84d55cf280211931900419ab9c009008006005135573aa00226ea800444888c8c8cccd5cd19b8735573aa0049000119aa80598031aba150023005357426ae8940088c98c8020cd5ce00480400309aab9e5001137540029309000a48103505431003200135500b2211222533500115007221350022253353300700600213500c0011333553009120010070060031122123300100300212122300200311220011122320013200135500922533500110032213300600230040011233500150025003112200212212233001004003233573892011443617463682d616c6c2063617365206572726f720000212200212200111232300100122330033002002001480092211cf1eda47a5724f121fe27d208fb96c675db997cdb7ef6c7a3a75d1a1b0048810c42594e45544c6963656e73650001",
            "version": 0,
          },
        ],
        "signatures": Map {
          "3213e3fa6e42a75ba69df35d80666a021b0a650be3c5dadee03532414e90ab9c" => "2c130293b9ec327d2ae59c4bfbc7779951b1deb1a9545ac9c3462ecb7e18b407e4d48d153500ee848dac1dd07c5db97e1fa1d094ee7903fa689e45fb08f96e0e",
        },
      },
    },
    Object {
      "auxiliaryData": Object {
        "blob": Map {
          0n => Array [],
        },
        "scripts": undefined,
      },
      "body": Object {
        "auxiliaryDataHash": "b93d8e428871a0b0e12c5c554653f515f50fe48dc5b55af7e3667e7d9661ea2c",
        "certificates": undefined,
        "collateralReturn": undefined,
        "collaterals": undefined,
        "donation": undefined,
        "fee": 183233n,
        "inputs": Array [
          Object {
            "index": 0,
            "txId": "803f8599f482d6f4c84da3b095efb4667aa4506d442cf080125a1baa1d66085e",
          },
          Object {
            "index": 0,
            "txId": "98d92512364c908d1866e5a23e73c3f2b5219d7f4963343565943823dfc9b3a6",
          },
          Object {
            "index": 1,
            "txId": "98d92512364c908d1866e5a23e73c3f2b5219d7f4963343565943823dfc9b3a6",
          },
        ],
        "mint": undefined,
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1qry0mqhwlf84py9nhz5qukujgjjx26cwg3zqvm2aqeuqqneyz5g72vhh8ws2fcjudfjesyl8fy4qss4rdx9v34e2pxps5s28ar",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 1000000n,
            },
          },
          Object {
            "address": "addr_test1qpavsa3m303vjnpsa4cpjzsgeqmkaa7wya3v94s9pq4wtrpyz5g72vhh8ws2fcjudfjesyl8fy4qss4rdx9v34e2pxpsnutk58",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 9986971687n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": undefined,
        "scriptIntegrityHash": undefined,
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": Object {
          "invalidBefore": undefined,
          "invalidHereafter": 11198411,
        },
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "5448314ba8c137b110f279c2b8869f88b77cce325cddf8aec64480708bd18915",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": undefined,
        "redeemers": undefined,
        "scripts": undefined,
        "signatures": Map {
          "53b8509684715055c86ded21c00e6f7c9c2efa73a94959842a3fe91d6001e932" => "cc35732a94c3f4521479942a07bdbf54f71062dd134fe66ff015a66ec74016b348782e4d2eafd99ae66cc7894249587622c4092090c841b439dfea558ff2190d",
          "2cf1d6c8d41391e658e25dbc88638831d7af3254988bde4650e1c595c2121461" => "f76fd79984cb7bbdeb5445c040aa873f60f1f3f56c71d3db77468261c864b8e745916bf519ae2e54453692dc2d1b0a0b1daf68ece63f084ac3b67d665637920d",
        },
      },
    },
  ],
  "fees": 1463373n,
  "header": Object {
    "blockNo": 203082,
    "hash": "cfe3bf5be724076a3afbdf590873a4c616baa9a7daf5da26843a8bf1592b5757",
    "slot": 11191217,
  },
  "issuerVk": "9691ed9d98a5b79d5bc46c4496a6dba7e103f668f525c8349b6b92676cb3eae4",
  "previousBlock": "93c19803741b88256b485b51f4f4f21753e3828033634c65ace84b637dac3259",
  "size": 8511,
  "totalOutput": 29698651346n,
  "txCount": 6,
  "vrf": "vrf_vk1afy7gefvgc9eaek64lhunxw2velmuh4467n6a2aalah7r8q68j0s4f2sa9",
}
`;

exports[`ogmiosToCore block can translate from allegra block 1`] = `
Object {
  "body": Array [
    Object {
      "auxiliaryData": undefined,
      "body": Object {
        "auxiliaryDataHash": undefined,
        "certificates": undefined,
        "collateralReturn": undefined,
        "collaterals": undefined,
        "donation": undefined,
        "fee": 207829n,
        "inputs": Array [
          Object {
            "index": 0,
            "txId": "a00696a0c2d70c381a265a845e43c55e1d00f96b27c06defc015dc92eb206240",
          },
        ],
        "mint": undefined,
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1vz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclgmzkket",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 29699998493147869n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": undefined,
        "scriptIntegrityHash": undefined,
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": undefined,
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "09356caeb451ca971e1c58af2c95965d46d591e921c9b58c665b0e5e4c5b42a5",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": undefined,
        "redeemers": undefined,
        "scripts": undefined,
        "signatures": Map {
          "8b0960d234bda67d52432c5d1a26aca2bfb5b9a09f966d9592a7bf0c728a1ecd" => "11a439a7391e34bd1bd4829f669a630276deb8cbe59f2a5ccca5190d19963bef9477e6f61e8d47438323ce9424befec3357c88908473fd332a7633ab2882c006",
          "618b625df30de53895ff29e7a3770dca56c2ff066d4aa05a6971905deecef6db" => "5cde79e14b9c033276fb503aaf6ae84fd0142d63e01c0a81ec1fb0794874184c2e3ac0fca64274f01be1ff3b7a93d2e7df60b485deb71fa8549a8ad879b0cb07",
          "69a14b724409e0ceef671c76ec4f8bce7509b5919bb971b3855bf92ca5653222" => "ecd0ea504800f96b34cc42742b1bd45990fa0068161c9cce3fb0703568c7dfe2a9283c02e63d0593bab15fa34fe9b732ad1915019d0f2d05a0fd0a570aa14205",
          "d1a8de6caa8fd9b175c59862ecdd5abcd0477b84b82a0e52faecc6b3c85100a4" => "60a4389a2a3ef54f7060c638a4268b5c7e2042bde1d1c7dc9ae9d29ffbe8bb9170fc929f27e3b0b298d42f34035fd3c149c1ede0fce7ec2981c3c882123f180e",
          "9aae625d4d15bcb3733d420e064f1cd338f386e0af049fcd42b455a69d28ad36" => "7e986eef76c9dcfb2483ca3fbe299f224c51a58da94b85ba1fcba41b384691b4cde236ca0d72237a2a21fe373a0d68c69ec490f0628cb6523b0263ca3338fc0a",
          "942bb3aaab0f6442b906b65ba6ddbf7969caa662d90968926211a3d56532f11d" => "90b5745d1007bfc524ffc53dfa17e58483ff74e9d37275f0b9e9ca084e180e2c2799b7947dcdb34774836719ea897ee4bd3e38b7e52513084ef61dfd1ead3809",
          "d4dd69a41071bc2dc8e64a97f4bd6379524ce0c2b665728043a067e34d3e218a" => "d9b5a70f1f14b084385930fa47ed66ed0c8237812825f6c3923bdc702ab1f219cc4583b8c0e5d291cfd3e0ae586f4e98d5e87d251304ed3afd1c088c129a190f",
          "8ef320c2df6654a6188c45e9c639c0a686bf5a865295587d399dfeb05fe74ab6" => "a59197afd5188eba40323d57246103eda1bb231a4df0879e6b1c3ce512978af0c6e33355f53bb9db0e6f85cc8d835355b6b30af9dde11a94c8c7ed2c635a7603",
        },
      },
    },
  ],
  "fees": 207829n,
  "header": Object {
    "blockNo": 21655,
    "hash": "affaf81ee993f657212d094c345ba86eed383a1ba19b5510e419390b85aa77a2",
    "slot": 518600,
  },
  "issuerVk": "618b625df30de53895ff29e7a3770dca56c2ff066d4aa05a6971905deecef6db",
  "previousBlock": "cacf5da6b8d81bbdf77b5ce4f5ea7f7b6714a29b1e81dbf541b01e92d8e1a321",
  "size": 1193,
  "totalOutput": 29699998493147869n,
  "txCount": 1,
  "vrf": "vrf_vk1wpa9axwwassnadt8drdrzptxm285latvhhvsgv0t6zhp0akgej9sfgecvl",
}
`;

exports[`ogmiosToCore block can translate from alonzo block 1`] = `
Object {
  "body": Array [
    Object {
      "auxiliaryData": undefined,
      "body": Object {
        "auxiliaryDataHash": undefined,
        "certificates": undefined,
        "collateralReturn": undefined,
        "collaterals": undefined,
        "donation": undefined,
        "fee": 205981n,
        "inputs": Array [
          Object {
            "index": 0,
            "txId": "0dd9b1dd89ff50c6907b3fd0385fde86f7c6877c2c9a95a9a9aa83b1cfead128",
          },
        ],
        "mint": undefined,
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1vz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclgmzkket",
            "datum": undefined,
            "datumHash": "c5dfa8c3cbd5a959829618a7b46e163078cb3f1b39f152514d0c3686d553529a",
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 29699998492735907n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": undefined,
        "scriptIntegrityHash": undefined,
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": undefined,
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "7a1ec0a69fbe6f0b6c80c53faf1ac880c49fc726dc26f4a785d827a8118f1c6d",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": undefined,
        "redeemers": undefined,
        "scripts": undefined,
        "signatures": Map {
          "8b0960d234bda67d52432c5d1a26aca2bfb5b9a09f966d9592a7bf0c728a1ecd" => "845756107198dcd60b639313ca9ca17ea4553ee24fcaa23620260f9da8304eee99b7bfce574071ec216a148b75162b01294dea76a6a8abae1de5387a68b44c03",
          "618b625df30de53895ff29e7a3770dca56c2ff066d4aa05a6971905deecef6db" => "2c65c8f60495bdcf7fc077ff3545bf31d2379b5bc0efb88e393d54a2a43fbb7616d18c3e6537bb83d1c56f75241b9b13c72d9f28d96d692eb1e58cf52977a30d",
          "69a14b724409e0ceef671c76ec4f8bce7509b5919bb971b3855bf92ca5653222" => "86f498524e0c7cfdd8999929ae915318d9bc67e1a935f24787bb9e7f5f4e68686650f5191f0783bfa343a56215d1ba67b721e9635d44af0d8fa28f003dcbe007",
          "d1a8de6caa8fd9b175c59862ecdd5abcd0477b84b82a0e52faecc6b3c85100a4" => "898bbf40ffd2e7890665947986051ab90fa6b8988bf53ae89d263e3ba84acc288757aef8d0327692c94a487e919ef720bfa485bcff33b342787ff719fb83cc04",
          "9aae625d4d15bcb3733d420e064f1cd338f386e0af049fcd42b455a69d28ad36" => "0b8eb0ec9dd0b16037a5f457176d6635c1934eeea7f3d8c419b7bb35316479adae9cf037a609ed0cc77fac76774bd8d50d1e2b205bd707127007312acfe8ac0e",
          "942bb3aaab0f6442b906b65ba6ddbf7969caa662d90968926211a3d56532f11d" => "eac02a754184454b5a83983560b830e522f828fd17f5e014d49044891013cd87d3dab5730971459cad48a62ea33271f9164d9196e46a708538efce06d16c3e09",
          "d4dd69a41071bc2dc8e64a97f4bd6379524ce0c2b665728043a067e34d3e218a" => "176b13ca898b1e8b9e87cefdd4a168f0d2ae65999e83fc82f4780ba0aaf3c81e9da85b46a294f780eb1318d40bea6678dc08eab441ce8f70b4fa9bfbceabdc07",
          "8ef320c2df6654a6188c45e9c639c0a686bf5a865295587d399dfeb05fe74ab6" => "f36dcb0ae7d5a7d833ebe9adf272047794b6b0be28971302bfe0fa8ab09fd682080b42046c3f11362556aa76727cbaaa3c09c60618c47e35c0ed32fe89adf603",
        },
      },
    },
  ],
  "fees": 205981n,
  "header": Object {
    "blockNo": 86474,
    "hash": "1515d47fe2edba2275eca300e160032f99f684bbf4e852d6f2d86b2e13d0b897",
    "slot": 1814649,
  },
  "issuerVk": "f270c16659735ec4b65d15d1cbef937e50e608585ac3b71a4cd117fdb761624e",
  "previousBlock": "89b666de5df4603c050a7a758e4e07f6b29acbaeb020603920e7ae82981bb7a5",
  "size": 1152,
  "totalOutput": 29699998492735907n,
  "txCount": 1,
  "vrf": "vrf_vk1aw6s04lqkquell8drg6jjusrzd8c5259kctvxkgug5kta7nphz9qfqtr4w",
}
`;

exports[`ogmiosToCore block can translate from byron block 1`] = `
Object {
  "body": Array [
    Object {
      "auxiliaryData": undefined,
      "body": Object {
        "auxiliaryDataHash": undefined,
        "certificates": undefined,
        "collaterals": undefined,
        "fee": 165884094000000n,
        "inputs": Array [
          Object {
            "index": 0,
            "txId": "a12a839c25a01fa5d118167db5acdbd9e38172ae8f00e5ac0a4997ef792a2007",
          },
        ],
        "mint": undefined,
        "outputs": Array [
          Object {
            "address": "DdzFFzCqrhsszHTvbjTmYje5hehGbadkT6WgWbaqCy5XNxNttsPNF13eAjjBHYT7JaLJz2XVxiucam1EvwBRPSTiCrT4TNCBas4hfzic",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": Map {},
              "coins": 1000000n,
            },
          },
        ],
        "requiredExtraSignatures": undefined,
      },
      "id": "6497b33b10fa2619c6efbd9f874ecd1c91badb10bf70850732aab45b90524d9e",
      "inputSource": undefined,
      "witness": Object {
        "bootstrap": Array [],
        "signatures": Map {
          "8c0bdedfbbab26a1308300512ffb1b220f068ee13f7612afb076c22de3fb7641" => "6cc41635a9794234966629ccfa2a5b089a20ae392f0e92154ff97eda30ff7a082a65fc4b362c24cf58c27f30103b1f1345e15479cf4b80cd4134c0f9dca83109",
        },
      },
    },
  ],
  "fees": undefined,
  "header": Object {
    "blockNo": 3314,
    "hash": "cf80534e520fa8f4bde1ed2f623553b8a6a9fd616d73bf9d4f7d6d1687685248",
    "slot": 3313,
  },
  "issuerVk": undefined,
  "previousBlock": "43d58aa00099c44787fdb174db22823494814eb2cdf209b044ca20cc5cf62b25",
  "size": 908,
  "totalOutput": 1000000n,
  "txCount": 1,
  "vrf": undefined,
}
`;

exports[`ogmiosToCore block can translate from mary block 1`] = `
Object {
  "body": Array [
    Object {
      "auxiliaryData": undefined,
      "body": Object {
        "auxiliaryDataHash": undefined,
        "certificates": undefined,
        "collateralReturn": undefined,
        "collaterals": undefined,
        "donation": undefined,
        "fee": 205981n,
        "inputs": Array [
          Object {
            "index": 0,
            "txId": "59f68ea73b95940d443dc516702d5e5deccac2429e4d974f464cc9b26292fd9c",
          },
        ],
        "mint": undefined,
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1vz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclgmzkket",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 29699998492941888n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": undefined,
        "scriptIntegrityHash": undefined,
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": undefined,
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "59132cc019b0674704ebd1aa6235ef70d350927cbb02a480c9a01d8254119b21",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": undefined,
        "redeemers": undefined,
        "scripts": undefined,
        "signatures": Map {
          "8b0960d234bda67d52432c5d1a26aca2bfb5b9a09f966d9592a7bf0c728a1ecd" => "222b333c56031a63e8e975f59fa6e646a733cc8c4b6d9d2aecea0d23366edadb83077a9ac79541e3044798549bc9088e9409194f4451324a65bb1d8237b74a03",
          "618b625df30de53895ff29e7a3770dca56c2ff066d4aa05a6971905deecef6db" => "05d8f7aff6fc03cbb3b8c63e0ebcef7cfd55c86be48d1d39642d46d62f879114e3285ec16814746e836d1f6ac6e8be4caf203651e5cbb41297c01b4dde17a606",
          "69a14b724409e0ceef671c76ec4f8bce7509b5919bb971b3855bf92ca5653222" => "8575f55be5b478d224842bb841bc46e3b347613e54f5245e16b644bc022910ac847e55af0081ed17750a790bf703cde299c30c8f170026983a956206c5ef0108",
          "d1a8de6caa8fd9b175c59862ecdd5abcd0477b84b82a0e52faecc6b3c85100a4" => "709e0431c27585279b573554c19f0cc4726334f594e03e483c22022116a2521920e148348e85cf447440883b12fb31367448b335be2eeed7f67cfff46bdf0b09",
          "9aae625d4d15bcb3733d420e064f1cd338f386e0af049fcd42b455a69d28ad36" => "5757bb1a900d76381c3b2d3effcbb9be4ded84ccbed18a4e6fec1f2a9473b8fd39243c1a15c33b0094debb069bb0022827c691c23fef4558f70b4dea82a97f05",
          "942bb3aaab0f6442b906b65ba6ddbf7969caa662d90968926211a3d56532f11d" => "e8aebefe3cf0415f7c3d5f45fd890962eeadf29e9c6e07456967cccbd17827add3a35e0b15d500a1c28522603e987fbb1733b2e4a2921d052ff8b2a2df975609",
          "d4dd69a41071bc2dc8e64a97f4bd6379524ce0c2b665728043a067e34d3e218a" => "3db756d3166532edce43afb52affca938d2d6d50f4ce12354e20279ac30b2dc503329d482ac71c7412e9f39cf98a2d7d79014673d3e92d2d1e4cf7921794610d",
          "8ef320c2df6654a6188c45e9c639c0a686bf5a865295587d399dfeb05fe74ab6" => "a9c6378add6790ec88661ed90b86d11f1e5db8750b5f758c6b4f7c43331b5414f86e519ffed0fe34ecf3ee030122bd1b58676e209ac7383039e42790477c1b02",
        },
      },
    },
  ],
  "fees": 205981n,
  "header": Object {
    "blockNo": 43245,
    "hash": "e5e19970aa093a9cf6df9f62aa263ceccc9b06a7a8456a9a3cc3270cd980d7ab",
    "slot": 950500,
  },
  "issuerVk": "f270c16659735ec4b65d15d1cbef937e50e608585ac3b71a4cd117fdb761624e",
  "previousBlock": "3618c2ea1f45f1735d990c15327446e60b36f60ca8c5266dcaae9a898d80e029",
  "size": 1151,
  "totalOutput": 29699998492941888n,
  "txCount": 1,
  "vrf": "vrf_vk1aw6s04lqkquell8drg6jjusrzd8c5259kctvxkgug5kta7nphz9qfqtr4w",
}
`;

exports[`ogmiosToCore block can translate from shelley block 1`] = `
Object {
  "body": Array [
    Object {
      "auxiliaryData": undefined,
      "body": Object {
        "auxiliaryDataHash": undefined,
        "certificates": Array [
          Object {
            "__typename": "StakeRegistrationCertificate",
            "stakeCredential": Object {
              "hash": "968d1021ebd7178e1fb0e79676982825cabc779b653e1234d58ce3c6",
              "type": 0,
            },
          },
          Object {
            "__typename": "PoolRegistrationCertificate",
            "poolParameters": Object {
              "cost": 500000000n,
              "id": "pool1547tew8vmuj0g6vj3k5jfddudextcw6hsk2hwgg6pkhk7lwphe6",
              "margin": Object {
                "denominator": 1,
                "numerator": 1,
              },
              "metadataJson": undefined,
              "owners": Array [
                "stake_test1uztg6yppa0t30rslkrneva5c9qju40rhndjnuy356kxw83s6n95nu",
              ],
              "pledge": 100000000000000n,
              "relays": Array [
                Object {
                  "__typename": "RelayByName",
                  "hostname": "preprod-node.world.dev.cardano.org",
                  "port": 30000,
                },
              ],
              "rewardAccount": "stake_test1uzkdwx64sjkt6xxtzye00y3k2m9wn5zultsguadaf4ggmssadyunp",
              "vrf": "868173d343611103acbdb3452b922bbca5e580d08da4e8f7abf3fb0f2284338a",
            },
          },
          Object {
            "__typename": "StakeDelegationCertificate",
            "poolId": "pool1547tew8vmuj0g6vj3k5jfddudextcw6hsk2hwgg6pkhk7lwphe6",
            "stakeCredential": Object {
              "hash": "968d1021ebd7178e1fb0e79676982825cabc779b653e1234d58ce3c6",
              "type": 0,
            },
          },
          Object {
            "__typename": "StakeRegistrationCertificate",
            "stakeCredential": Object {
              "hash": "f130204b518f70c19995449e3737eded3d9ffc31cb50ec0e45010ba3",
              "type": 0,
            },
          },
          Object {
            "__typename": "PoolRegistrationCertificate",
            "poolParameters": Object {
              "cost": 500000000n,
              "id": "pool174mw7e20768e8vj4fn8y6p536n8rkzswsapwtwn354dckpjqzr8",
              "margin": Object {
                "denominator": 1,
                "numerator": 1,
              },
              "metadataJson": undefined,
              "owners": Array [
                "stake_test1urcnqgzt2x8hpsvej4zfudehahknm8lux894pmqwg5qshgcrn346q",
              ],
              "pledge": 100000000000000n,
              "relays": Array [
                Object {
                  "__typename": "RelayByName",
                  "hostname": "preprod-node.world.dev.cardano.org",
                  "port": 30000,
                },
              ],
              "rewardAccount": "stake_test1uzkdwx64sjkt6xxtzye00y3k2m9wn5zultsguadaf4ggmssadyunp",
              "vrf": "352196224497a0fd7bad52d113767660bf70f8b11a8c40c265f7bfb359ebe9ee",
            },
          },
          Object {
            "__typename": "StakeDelegationCertificate",
            "poolId": "pool174mw7e20768e8vj4fn8y6p536n8rkzswsapwtwn354dckpjqzr8",
            "stakeCredential": Object {
              "hash": "f130204b518f70c19995449e3737eded3d9ffc31cb50ec0e45010ba3",
              "type": 0,
            },
          },
          Object {
            "__typename": "StakeRegistrationCertificate",
            "stakeCredential": Object {
              "hash": "392ae9e068e55e8b5c27acc58b0bab8ea568c0aae2f6fc49be23a7ad",
              "type": 0,
            },
          },
          Object {
            "__typename": "PoolRegistrationCertificate",
            "poolParameters": Object {
              "cost": 500000000n,
              "id": "pool1z22x50lqsrwent6en0llzzs9e577rx7n3mv9kfw7udwa2rf42fa",
              "margin": Object {
                "denominator": 1,
                "numerator": 1,
              },
              "metadataJson": undefined,
              "owners": Array [
                "stake_test1uquj460qdrj4az6uy7kvtzct4w8226xq4t30dlzfhc360tgegny4m",
              ],
              "pledge": 100000000000000n,
              "relays": Array [
                Object {
                  "__typename": "RelayByName",
                  "hostname": "preprod-node.world.dev.cardano.org",
                  "port": 30000,
                },
              ],
              "rewardAccount": "stake_test1uzkdwx64sjkt6xxtzye00y3k2m9wn5zultsguadaf4ggmssadyunp",
              "vrf": "4b21cf2449bbbaa834e403a29788daec0faab9f3c6b8b25d82aa8366a1a94464",
            },
          },
          Object {
            "__typename": "StakeDelegationCertificate",
            "poolId": "pool1z22x50lqsrwent6en0llzzs9e577rx7n3mv9kfw7udwa2rf42fa",
            "stakeCredential": Object {
              "hash": "392ae9e068e55e8b5c27acc58b0bab8ea568c0aae2f6fc49be23a7ad",
              "type": 0,
            },
          },
        ],
        "collateralReturn": undefined,
        "collaterals": undefined,
        "donation": undefined,
        "fee": 238057n,
        "inputs": Array [
          Object {
            "index": 0,
            "txId": "b75ec46c406113372efeb1e57d9880856c240c9b531e3c680c1c4d8bf2253625",
          },
        ],
        "mint": undefined,
        "networkId": undefined,
        "outputs": Array [
          Object {
            "address": "addr_test1vz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclgmzkket",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 29699998493561943n,
            },
          },
          Object {
            "address": "addr_test1qz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclvk35gzr67hz78plv88jemfs2p9e2780xm98cfrf4vvu0rq83pdz2",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 100000000000000n,
            },
          },
          Object {
            "address": "addr_test1qz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzcl03xqsyk5v0wrqen92yncmn0m0d8k0lcvwt2rkqu3gppw3sdexkvh",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 100000000000000n,
            },
          },
          Object {
            "address": "addr_test1qz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclfe9t57q689t694cfavck9sh2uw545vp2hz7m7yn03r57kslz5rjf",
            "datum": undefined,
            "datumHash": undefined,
            "scriptReference": undefined,
            "value": Object {
              "assets": undefined,
              "coins": 100000000000000n,
            },
          },
        ],
        "proposalProcedures": undefined,
        "referenceInputs": undefined,
        "requiredExtraSignatures": undefined,
        "scriptIntegrityHash": undefined,
        "totalCollateral": undefined,
        "treasuryValue": undefined,
        "update": undefined,
        "validityInterval": Object {
          "invalidBefore": undefined,
          "invalidHereafter": 90000,
        },
        "votingProcedures": undefined,
        "withdrawals": undefined,
      },
      "id": "a3d6f2627a56fe7921eeda546abfe164321881d41549b7f2fbf09ea0b718d758",
      "inputSource": "inputs",
      "isValid": true,
      "witness": Object {
        "bootstrap": undefined,
        "datums": undefined,
        "redeemers": undefined,
        "scripts": undefined,
        "signatures": Map {
          "9691ed9d98a5b79d5bc46c4496a6dba7e103f668f525c8349b6b92676cb3eae4" => "5ce8776d3b749e7b096f5dbd388029db57a0c9fc87662b93cf31da4ad1748b3d5d92a7d65454043ae10dbfa4ac34929311526323a7ab3a7436f02e16abdbdb08",
          "28450e496f2217e62bf9fd2ece94114562ade49368f456d2e63df2bc4af3244c" => "7c56a4a38044f6b5ee32590bf73cb1101c7c650ff76c07c15d31c87181607a750e90dc09abcb1a431e0ba7c31065f5e3743bf3e1bafe120ca45e4c910f2dc000",
          "7b5e9791e10baedf8b1393a32e8851b2ab56c4e9ee1ec489a7ea24f2b6043573" => "512f085e1ffcf13d1328cc458929b79d70cef21bc1028ed1f94e716623869eae9aa9b364e129e289cb18e7d0f58b0d6e7502d4427899535d2d29fcdc30c9cc05",
          "69a14b724409e0ceef671c76ec4f8bce7509b5919bb971b3855bf92ca5653222" => "aceda22823823a98fd7363a841c0f75f220bc31a5dd057878f4c59836077260b2db7c1df8547d733bc0972c96c7602cfc847218d4c8dc4f4b770e0dc33124a0f",
          "f270c16659735ec4b65d15d1cbef937e50e608585ac3b71a4cd117fdb761624e" => "d4bd1741ee8064438c564d008b2b7278127f2c4d6b711f4ddb3354c66eb520f3bf3eb1b05046b54d7239df8aaa6623df91f5a59e844977c13fb952f40523a705",
          "29036ea60a8b5335b4c026aeb30b87bbcb546fb15a207f4a7035519128bf8a64" => "4d521485917683dff50929915e484255d6360a84a1fe06d908558a242725e3d932ab4d72665af1d483e4b5b20656b524445b5267f50207aabf6a29098bbc1302",
          "a9d974fd26bfaf385749113f260271430276bed6ef4dad6968535de6778471ce" => "22e89209cd66803d613dd586b4970ad77256aaf12a345abc28e07ac4b6975b7c5cfa729b18f00ea9cd252fe4ab1e89e37c6748ddca9e111ab2e2dba98743260d",
        },
      },
    },
  ],
  "fees": 238057n,
  "header": Object {
    "blockNo": 48,
    "hash": "49ef96c51afd2fbef46a73e6b535d7aea10a079a84df19d730e1a127be7e76f2",
    "slot": 86440,
  },
  "issuerVk": "9aae625d4d15bcb3733d420e064f1cd338f386e0af049fcd42b455a69d28ad36",
  "previousBlock": "664b6ec8a708b9cf90b87c904e688477887b55cbf4ee6c36877166a2ef216665",
  "size": 1880,
  "totalOutput": 29999998493561943n,
  "txCount": 1,
  "vrf": "vrf_vk1ny8dyz3pa9u7v7h8l5evsmxxjq07dk6j5uda60lxe3zsya5ea20s2c6jph",
}
`;